<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_front_page"
    android:background="@drawable/white_with_black_border"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:text="@string/tic_tac_toe"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/player"
            android:textSize="30sp"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/x"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/playerXEditText"
        android:hint="@string/insert_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:ems="9"
        android:background="@drawable/blue_edittext_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutX"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayoutO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/playerXEditText"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/player"
            android:textSize="30sp"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/o"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/playerOEditText"
        android:hint="@string/insert_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:ems="9"
        android:background="@drawable/red_edittext_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutO"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonPlay"
        android:text="@string/play"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:ems="9"
        android:background="@drawable/gray_with_black_border"
        android:height="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/playerOEditText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonHighscore"
        android:text="@string/highscores"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:ems="9"
        android:background="@drawable/gray_with_black_border"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonPlay"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
